# thesis

./: .gitignore  README.md  aas_macros.sty  lyttle21.bib  packages.sty  pyproject.toml  references.bib  summary.sh  thesis.tex  uobthesis.cls
.github/workflows/: publish.yml  test.yml  workflow.yml
appendices/: lyttle21.tex
chapters/: conclusion.tex  glitch-gp.tex  glitch.tex  hbm.tex  introduction.tex  lyttle21.tex  nn.tex  outline.tex  seismo.tex  software.tex
figures/: glitch-1d-example.tex  glitch-test-amplitude.eps
notebooks/: asteroseismology.ipynb  compare-glitch-approx.ipynb  emulating-mesa.ipynb  emulting-mist.ipynb  fake-observed-star.ipynb  first-adiabatic-exponent.ipynb  glitch-comparison.ipynb  glitch-prediction.ipynb  gp-glitch-16cyga.ipynb  gp-glitch-mle.ipynb  gp-glitch-numpyro.ipynb  gp-glitch.ipynb  gp-method-2.ipynb  gp-method-3.ipynb  gp-method.ipynb  hbm-extended.ipynb  hbm-results.ipynb  hbm.ipynb  observed-glitch-data.ipynb  one-dimensional-glitch.ipynb  poly-glitch.ipynb  poly-method.ipynb  references.ipynb  solar-like-model-comparison.ipynb  spherical-harmonics.ipynb  structure-kernels.ipynb  v19-glitch-16cyga.ipynb  v19-glitch.ipynb  verma-method.ipynb
scripts/: gaia-cmd.py  hr-diagram.py  hr-diagram_r.py
tables/: glitch-test-obs.tex  glitch-test-prior-2.tex  glitch-test-prior.tex  hbm-data.tex  hyperparam_results.tex  standardisation.tex  stars_inputs.tex  stars_outputs_MP.tex  stars_outputs_MPS.tex  stars_outputs_NP.tex  stars_outputs_PP.tex  stars_outputs_PPS.tex  sun_inputs.tex  sun_outputs.tex  test_random.tex
(+33 files in other folders)
