[build-system]
requires = ["setuptools"]  # the build tool to use
build-backend = "setuptools.build_meta"  # the function to use to build the package

[project]
name = "thesis"
version = "0.0.1"
dependencies = ["numpy", "astropy", "scipy", "tomso", "xarray", "h5netcdf"]
requires-python = ">=3.7"

[project.optional-dependencies]
notebooks = ["matplotlib", "cmcrameri"]
